# hs-temporal-sdk

./: .envrc  .gitignore  .gitmodules  .hlint.yaml  AGENTS.md  EVAN.md  README.md  Setup.hs  cabal.project  cabal.project.bench  cabal.project.profiling  cabal.project.soak  cabal.project.soak-ipe  doc-index-124.html  doc-index-36.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-64.html  doc-index-94.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  (+23 more)
.cursor/: Dockerfile  environment.json
app/: Main.hs
codec-encryption/: package.yaml  temporal-codec-encryption.cabal
codec-server/: package.yaml  temporal-sdk-codec-server.cabal
composite-codec/: package.yaml  temporal-sdk-default-codec.cabal
core/: LICENSE  Setup.hs  package.yaml  temporal-sdk-core.cabal
core/rust/: Cargo.nix  Cargo.toml  bindgen.sh  cbindgen.toml  crate-hashes.json  default.nix  temporal_bridge.h
core/rust/src/: client.rs  ephemeral_server.rs  lib.rs  rpc.rs  runtime.rs  worker.rs
core/src/Temporal/: Runtime.hs
core/src/Temporal/Client/: TestService.hs  WorkflowService.hs
core/src/Temporal/Core/: CTypes.hsc  Client.hs  EphemeralServer.hs  Errordetails.hs  Worker.hs
core/src/Temporal/Core/Client/: HealthService.hs  OperatorService.hs  TestService.hs  WorkflowService.hs
core/src/Temporal/Internal/: FFI.hs  JobPool.hs
core/test/: Main.hs
docs/: README.md  command-queue.md  (+2 more)
protos/: README.md  package.yaml  temporal-api-protos.cabal
protos/src/Proto/Compat/: HasField.hs
protos/src/Proto/Dependencies/Gogoproto/: Gogo.hs  Gogo_Fields.hs
protos/src/Proto/Google/Api/: Annotations.hs  Annotations_Fields.hs  Http.hs  Http_Fields.hs
protos/src/Proto/Google/Protobuf/: Any.hs  Api.hs  Descriptor.hs  Descriptor_Fields.hs  Empty.hs  FieldMask.hs  SourceContext.hs  Struct.hs  Type.hs  Wrappers.hs
protos/src/Proto/Google/Protobuf/Compiler/: Plugin.hs
protos/src/Proto/Health/V1/: Health.hs  Health_Fields.hs
protos/src/Proto/Rpc/: Status.hs  Status_Fields.hs
protos/src/Proto/Temporal/Api/Activity/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Batch/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Command/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Common/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Deployment/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Enums/V1/: BatchOperation.hs  BatchOperation_Fields.hs  CommandType.hs  CommandType_Fields.hs  Common.hs  Common_Fields.hs  Deployment.hs  Deployment_Fields.hs  EventType.hs  EventType_Fields.hs  FailedCause.hs  FailedCause_Fields.hs  Namespace.hs  Namespace_Fields.hs  Nexus.hs  Nexus_Fields.hs  Query.hs  Query_Fields.hs  Reset.hs  Reset_Fields.hs  Schedule.hs  Schedule_Fields.hs  TaskQueue.hs  TaskQueue_Fields.hs  Update.hs  Update_Fields.hs  Workflow.hs  Workflow_Fields.hs
protos/src/Proto/Temporal/Api/Errordetails/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Export/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Failure/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Filter/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/History/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Namespace/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Nexus/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Operatorservice/V1/: RequestResponse.hs  RequestResponse_Fields.hs  Service.hs  Service_Fields.hs
protos/src/Proto/Temporal/Api/Protocol/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Query/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Replication/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Rules/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Schedule/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Sdk/V1/: EnhancedStackTrace.hs  EnhancedStackTrace_Fields.hs  TaskCompleteMetadata.hs  TaskCompleteMetadata_Fields.hs  UserMetadata.hs  UserMetadata_Fields.hs  WorkerConfig.hs  WorkerConfig_Fields.hs  WorkflowMetadata.hs  WorkflowMetadata_Fields.hs
protos/src/Proto/Temporal/Api/Taskqueue/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Testservice/V1/: RequestResponse.hs  RequestResponse_Fields.hs  Service.hs  Service_Fields.hs
protos/src/Proto/Temporal/Api/Update/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Version/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Worker/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Workflow/V1/: Message.hs  Message_Fields.hs
protos/src/Proto/Temporal/Api/Workflowservice/V1/: RequestResponse.hs  RequestResponse_Fields.hs  Service.hs  Service_Fields.hs
protos/src/Proto/Temporal/Sdk/Core/: CoreInterface.hs  CoreInterface_Fields.hs
protos/src/Proto/Temporal/Sdk/Core/ActivityResult/: ActivityResult.hs  ActivityResult_Fields.hs
protos/src/Proto/Temporal/Sdk/Core/ActivityTask/: ActivityTask.hs  ActivityTask_Fields.hs
protos/src/Proto/Temporal/Sdk/Core/ChildWorkflow/: ChildWorkflow.hs  ChildWorkflow_Fields.hs
protos/src/Proto/Temporal/Sdk/Core/Common/: Common.hs  Common_Fields.hs
protos/src/Proto/Temporal/Sdk/Core/ExternalData/: ExternalData.hs  ExternalData_Fields.hs
protos/src/Proto/Temporal/Sdk/Core/Nexus/: Nexus.hs  Nexus_Fields.hs
protos/src/Proto/Temporal/Sdk/Core/WorkflowActivation/: WorkflowActivation.hs  WorkflowActivation_Fields.hs
protos/src/Proto/Temporal/Sdk/Core/WorkflowCommands/: WorkflowCommands.hs  WorkflowCommands_Fields.hs
protos/src/Proto/Temporal/Sdk/Core/WorkflowCompletion/: WorkflowCompletion.hs  WorkflowCompletion_Fields.hs
(+702 files in other folders)
