cabal-version: 3.0
name: temporal-sdk
version: 1.0.0.0
license-file: LICENSE
copyright: (c) Ian Duncan
author: Ian Duncan
build-type: Simple

library
  hs-source-dirs: src
  build-depends: 
    base >= 4.14 && < 5, 
    proto-lens, 
    temporal-api-protos, 
    temporal-sdk-core,
    bytestring, 
    mtl,
    text,
    aeson,
    unordered-containers,
    vector,
    async,
    unliftio,
    lens-family,
    uuid,
    uuid-types,
    stm,
    time,
    containers,
    clock,
    hashable,
    monad-logger,
    random,
    exceptions,
    ghc,
    template-haskell

  extra-libraries: hs_temporal_bridge
  default-language: Haskell2010
  default-extensions:
    BangPatterns,
    ConstraintKinds,
    GADTs,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    FlexibleContexts,
    FlexibleInstances,
    MultiParamTypeClasses,
    OverloadedStrings,
    OverloadedRecordDot,
    RankNTypes,
    RecordWildCards

  other-modules:
    Temporal.Activity.Definition,
    Temporal.Activity.Worker,
    Temporal.Common,
    Temporal.Workflow.WorkflowDefinition,
    Temporal.WorkflowInstance,
    Temporal.Workflow.Worker,
    Temporal.Workflow.Unsafe,
    Temporal.Workflow.WorkflowInstance,
    Temporal.Worker.Types
  exposed-modules:
    Temporal.Activity,
    Temporal.Exception,
    Temporal.Payload,
    Temporal.Workflow,
    Temporal.Worker

-- test-suite temporal-sdk-tests
--   type: exitcode-stdio-1.0

executable hello
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: 
    base >= 4.14 && < 5, 
    temporal-sdk, 
    temporal-sdk-core,
    proto-lens,
    temporal-api-protos,
    async,
    text,
    lens-family,
    uuid,
    unordered-containers,
    monad-logger,
    unliftio,
    clock
  default-language: Haskell2010
  frameworks: Security, CoreFoundation
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
