cabal-version: 3.0
name: temporal-sdk
version: 1.0.0.0
license-file: LICENSE
copyright: (c) Ian Duncan
author: Ian Duncan
build-type: Simple

library
  hs-source-dirs: src
  build-depends: 
    base >= 4.14 && < 5, 
    proto-lens, 
    temporal-api-protos, 
    temporal-sdk-core,
    bytestring, 
    mtl,
    text,
    aeson,
    unordered-containers,
    vector,
    async,
    unliftio,
    lens-family,
    uuid,
    uuid-types,
    stm,
    time,
    containers,
    clock,
    hashable,
    monad-logger,
    random,
    exceptions,
    ghc,
    template-haskell,
    unix,
    network-bsd,
    conduit

  default-language: Haskell2010
  default-extensions:
    BangPatterns,
    ConstraintKinds,
    GADTs,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    FlexibleContexts,
    FlexibleInstances,
    MultiParamTypeClasses,
    OverloadedStrings,
    OverloadedRecordDot,
    RankNTypes,
    RecordWildCards,
    TypeOperators

  other-modules:
    Temporal.Activity.Definition,
    Temporal.Activity.Worker,
    Temporal.Common,
    Temporal.Workflow.WorkflowDefinition,
    Temporal.WorkflowInstance,
    Temporal.Workflow.Worker,
    Temporal.Workflow.Unsafe,
    Temporal.Workflow.WorkflowInstance,
    Temporal.Worker.Types
  exposed-modules:
    Temporal.Activity,
    Temporal.Client,
    Temporal.EphemeralServer,
    Temporal.Exception,
    Temporal.Payload,
    -- Temporal.Schedule,
    Temporal.Workflow,
    Temporal.Worker

test-suite temporal-sdk-tests
  type: exitcode-stdio-1.0
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >= 4.14 && < 5,
    temporal-sdk,
    temporal-sdk-core,
    hspec,
    hspec-discover,
    clock,
    text,
    uuid,
    monad-logger,
    exceptions,
    mtl,
    time
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    Spec,
    AsyncCompletionSpec,
    IntegrationSpec,


-- executable hello
--   hs-source-dirs: app
--   main-is: Main.hs
--   build-depends: 
--     base >= 4.14 && < 5, 
--     temporal-sdk, 
--     temporal-sdk-core,
--     proto-lens,
--     temporal-api-protos,
--     async,
--     text,
--     lens-family,
--     uuid,
--     unordered-containers,
--     monad-logger,
--     unliftio,
--     clock,
--     unix
--   default-language: Haskell2010
--   frameworks: Security, CoreFoundation
--   ghc-options: -threaded -rtsopts -with-rtsopts=-N
