cabal-version: 3.0
name: temporal-api-protos
version: 1.0.0.0
license-file: LICENSE
copyright: (c) Ian Duncan
author: Ian Duncan

library
  hs-source-dirs: src
  build-depends: base >= 4.14 && < 5, proto-lens-runtime
  default-language: Haskell2010
  exposed-modules:
    Proto.Temporal.Sdk.Core.CoreInterface_Fields
    Proto.Temporal.Sdk.Core.ChildWorkflow.ChildWorkflow_Fields
    Proto.Temporal.Sdk.Core.ChildWorkflow.ChildWorkflow
    Proto.Temporal.Sdk.Core.WorkflowCompletion.WorkflowCompletion_Fields
    Proto.Temporal.Sdk.Core.WorkflowCompletion.WorkflowCompletion
    Proto.Temporal.Sdk.Core.WorkflowActivation.WorkflowActivation
    Proto.Temporal.Sdk.Core.WorkflowActivation.WorkflowActivation_Fields
    Proto.Temporal.Sdk.Core.ActivityTask.ActivityTask_Fields
    Proto.Temporal.Sdk.Core.ActivityTask.ActivityTask
    Proto.Temporal.Sdk.Core.ActivityResult.ActivityResult_Fields
    Proto.Temporal.Sdk.Core.ActivityResult.ActivityResult
    Proto.Temporal.Sdk.Core.ExternalData.ExternalData
    Proto.Temporal.Sdk.Core.ExternalData.ExternalData_Fields
    Proto.Temporal.Sdk.Core.Common.Common
    Proto.Temporal.Sdk.Core.Common.Common_Fields
    Proto.Temporal.Sdk.Core.CoreInterface
    Proto.Temporal.Sdk.Core.WorkflowCommands.WorkflowCommands_Fields
    Proto.Temporal.Sdk.Core.WorkflowCommands.WorkflowCommands
    Proto.Temporal.Api.Taskqueue.V1.Message_Fields
    Proto.Temporal.Api.Taskqueue.V1.Message
    Proto.Temporal.Api.Operatorservice.V1.RequestResponse
    Proto.Temporal.Api.Operatorservice.V1.RequestResponse_Fields
    Proto.Temporal.Api.Operatorservice.V1.Service_Fields
    Proto.Temporal.Api.Operatorservice.V1.Service
    Proto.Temporal.Api.Schedule.V1.Message_Fields
    Proto.Temporal.Api.Schedule.V1.Message
    Proto.Temporal.Api.Update.V1.Message_Fields
    Proto.Temporal.Api.Update.V1.Message
    Proto.Temporal.Api.Testservice.V1.RequestResponse
    Proto.Temporal.Api.Testservice.V1.RequestResponse_Fields
    Proto.Temporal.Api.Testservice.V1.Service_Fields
    Proto.Temporal.Api.Testservice.V1.Service
    Proto.Temporal.Api.Workflowservice.V1.RequestResponse
    Proto.Temporal.Api.Workflowservice.V1.RequestResponse_Fields
    Proto.Temporal.Api.Workflowservice.V1.Service_Fields
    Proto.Temporal.Api.Workflowservice.V1.Service
    Proto.Temporal.Api.Enums.V1.EventType_Fields
    Proto.Temporal.Api.Enums.V1.Query_Fields
    Proto.Temporal.Api.Enums.V1.TaskQueue_Fields
    Proto.Temporal.Api.Enums.V1.EventType
    Proto.Temporal.Api.Enums.V1.Namespace_Fields
    Proto.Temporal.Api.Enums.V1.Common
    Proto.Temporal.Api.Enums.V1.Schedule_Fields
    Proto.Temporal.Api.Enums.V1.Workflow_Fields
    Proto.Temporal.Api.Enums.V1.CommandType_Fields
    Proto.Temporal.Api.Enums.V1.FailedCause_Fields
    Proto.Temporal.Api.Enums.V1.Reset_Fields
    Proto.Temporal.Api.Enums.V1.Update_Fields
    Proto.Temporal.Api.Enums.V1.BatchOperation
    Proto.Temporal.Api.Enums.V1.Common_Fields
    Proto.Temporal.Api.Enums.V1.Namespace
    Proto.Temporal.Api.Enums.V1.BatchOperation_Fields
    Proto.Temporal.Api.Enums.V1.Workflow
    Proto.Temporal.Api.Enums.V1.Schedule
    Proto.Temporal.Api.Enums.V1.Query
    Proto.Temporal.Api.Enums.V1.FailedCause
    Proto.Temporal.Api.Enums.V1.TaskQueue
    Proto.Temporal.Api.Enums.V1.Update
    Proto.Temporal.Api.Enums.V1.Reset
    Proto.Temporal.Api.Enums.V1.CommandType
    Proto.Temporal.Api.Namespace.V1.Message_Fields
    Proto.Temporal.Api.Namespace.V1.Message
    Proto.Temporal.Api.Protocol.V1.Message_Fields
    Proto.Temporal.Api.Protocol.V1.Message
    Proto.Temporal.Api.Common.V1.Message_Fields
    Proto.Temporal.Api.Common.V1.Message
    Proto.Temporal.Api.Failure.V1.Message_Fields
    Proto.Temporal.Api.Failure.V1.Message
    Proto.Temporal.Api.Version.V1.Message_Fields
    Proto.Temporal.Api.Version.V1.Message
    Proto.Temporal.Api.Sdk.V1.TaskCompleteMetadata
    Proto.Temporal.Api.Sdk.V1.TaskCompleteMetadata_Fields
    Proto.Temporal.Api.Batch.V1.Message_Fields
    Proto.Temporal.Api.Batch.V1.Message
    Proto.Temporal.Api.Workflow.V1.Message_Fields
    Proto.Temporal.Api.Workflow.V1.Message
    Proto.Temporal.Api.History.V1.Message_Fields
    Proto.Temporal.Api.History.V1.Message
    Proto.Temporal.Api.Replication.V1.Message_Fields
    Proto.Temporal.Api.Replication.V1.Message
    Proto.Temporal.Api.Command.V1.Message_Fields
    Proto.Temporal.Api.Command.V1.Message
    Proto.Temporal.Api.Filter.V1.Message_Fields
    Proto.Temporal.Api.Filter.V1.Message
    Proto.Temporal.Api.Query.V1.Message_Fields
    Proto.Temporal.Api.Query.V1.Message
    Proto.Temporal.Api.Errordetails.V1.Message_Fields
    Proto.Temporal.Api.Errordetails.V1.Message
    Proto.Google.Protobuf.Api_Fields
    Proto.Google.Protobuf.FieldMask_Fields
    Proto.Google.Protobuf.SourceContext
    Proto.Google.Protobuf.Wrappers
    Proto.Google.Protobuf.Api
    Proto.Google.Protobuf.Descriptor_Fields
    Proto.Google.Protobuf.Type_Fields
    Proto.Google.Protobuf.Struct_Fields
    Proto.Google.Protobuf.Struct
    Proto.Google.Protobuf.Empty_Fields
    Proto.Google.Protobuf.Any
    Proto.Google.Protobuf.Timestamp
    Proto.Google.Protobuf.Wrappers_Fields
    Proto.Google.Protobuf.SourceContext_Fields
    Proto.Google.Protobuf.Duration_Fields
    Proto.Google.Protobuf.Descriptor
    Proto.Google.Protobuf.Type
    Proto.Google.Protobuf.Timestamp_Fields
    Proto.Google.Protobuf.Any_Fields
    Proto.Google.Protobuf.Empty
    Proto.Google.Protobuf.Duration
    Proto.Google.Protobuf.FieldMask
    Proto.Health.V1.Health_Fields
    Proto.Health.V1.Health
    Proto.Dependencies.Gogoproto.Gogo_Fields
    Proto.Dependencies.Gogoproto.Gogo