[package]
name = "temporal_bridge"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
temporalio-client = { git = "https://github.com/temporalio/sdk-core", rev = "a22517e43db15e2a7592f376775a67951c116d0d" }
temporalio-sdk-core = { git = "https://github.com/temporalio/sdk-core", rev = "9a87ebf7260c3594675ffed83a3728d2cd96e912", features = ["ephemeral-server"] }
temporalio-common = { git = "https://github.com/temporalio/sdk-core", rev = "9a87ebf7260c3594675ffed83a3728d2cd96e912", features = ["serde_serialize"] }
tokio = "~1.50"
tokio-stream = "~0.1"
tonic = "~0.14"
tonic-prost = "~0.14"
tracing = "~0.1"
tracing-subscriber = "~0.3.21"
url = "~2.5"
ffi-convert = "~0.6"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
prost = "~0.14"
prost-types = { version = "~0.7", package = "prost-wkt-types" }
libc = "~0.2"
async-trait = "0.1"

[profile.release]
opt-level = 3
debug = false
lto = true
incremental = true
